# secret_santa_py

./: README.md  cloud_run.py  get_contacts.py  index.py  local_run.py  main.py  manual_run.py  pyproject.toml  renovate.json  tox.ini
.github/: dependabot.yml
.github/workflows/: action.yml  auto_merge_dependabot_prs.yml  create_and_send_on_schedule.yml  run_tests.yml
data_utilities/: assignment_algorithm.py  get_contacts.py
messages/: message_bodies.py  message_body.py  send_messages.py
secret_santa_data_utilities/: contact_types.py  get_contacts.py  make_combinations.py  secret_santa_assignment_algorithm.py
src/: cloud_run.py  manual_run.py
src/data_utilities/: assignment_algorithm.py  contact_types.py  get_contacts.py
src/messages/: message_bodies.py  send_emails.py  send_emails_with_sendgrid.py  send_emails_with_yagmail.py  send_messages.py  send_text_messages.py
tests/: create_test_data.py  index.py  integrations_test.py  make_combinations_test.py  unique_secret_santas_test.py  validate_data_test.py
utilities/: get_contacts.py  make_combinations.py
