[tool.poetry]
name = "secret_santa_py"
version = "1.0.0"
description = "generate secret santa combinations and send via text message"
authors = ["Ian Davis"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
twilio = "^9.0.5"
keyring = "^25.3.0"
sendgrid = "^6.11.0"
python-dotenv = "^1.0.1"
yagmail = "^0.15.293"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
Faker = "^33.0.0"
coverage = "^7.4.4"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
pythonpath =[
    "."
]
minversion = "7.0"
addopts = [
    "-ra -v"
]

testpaths = "tests"

[tool.coverage.run]
omit = [
  'tests/*',
  'src/cloud_run.py',
  'src/manual_run.py'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
