[project]
name = "secret_santa_py"
version = "1.0.0"
description = "generate secret santa combinations and send via text message"
authors = [{ name = "Ian Davis" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "requests>=2.32.3,<3",
    "twilio>=9.0.5,<10",
    "keyring>=25.3.0,<26",
    "sendgrid>=6.11.0,<7",
    "python-dotenv>=1.0.1,<2",
    "yagmail>=0.15.293,<0.16",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "Faker>=26.1.0,<27",
    "coverage>=7.4.4,<8",
    "pytest-cov>=6.1.1,<7",
    "ruff>=0.7.2",
]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
minversion = "7.0"
addopts = ["-ra -v"]

testpaths = "tests"

[tool.coverage.run]
omit = ['tests/*', 'src/cloud_run.py', 'src/manual_run.py']
